# TestER

./: .gitignore  CMakeLists.txt  index.md
examples/: InputCloud.ply  MM-Error-11188_81_290_426.txt  MM-Error-19359_701_436_560.txt  MM-Error-19813_742_20_566.txt  MM-Error-19817_747_992_529.txt  MM-Error-21664_678_247_968.txt  MM-Error-5272_112_87_359.txt  MM-Error-9785_775_767_898.txt  MicMac-LocalChantierDescripteur.xml  OutputCloud.ply  mm3d-LogFile.txt
examples/Ori-BAL2/: AutoCal_Foc-50000.xml  Orientation-Img-0.tif.xml  Orientation-Img-1.tif.xml  Orientation-Img-10.tif.xml  Orientation-Img-11.tif.xml  Orientation-Img-12.tif.xml  Orientation-Img-13.tif.xml  Orientation-Img-14.tif.xml  Orientation-Img-15.tif.xml  Orientation-Img-16.tif.xml  Orientation-Img-17.tif.xml  Orientation-Img-18.tif.xml  Orientation-Img-19.tif.xml  Orientation-Img-2.tif.xml  Orientation-Img-20.tif.xml  Orientation-Img-21.tif.xml  Orientation-Img-22.tif.xml  Orientation-Img-23.tif.xml  Orientation-Img-24.tif.xml  Orientation-Img-25.tif.xml  Orientation-Img-26.tif.xml  Orientation-Img-27.tif.xml  Orientation-Img-28.tif.xml  Orientation-Img-29.tif.xml  Orientation-Img-3.tif.xml  Orientation-Img-30.tif.xml  Orientation-Img-31.tif.xml  Orientation-Img-32.tif.xml  Orientation-Img-33.tif.xml  Orientation-Img-34.tif.xml  Orientation-Img-35.tif.xml  Orientation-Img-36.tif.xml  Orientation-Img-37.tif.xml  Orientation-Img-38.tif.xml  Orientation-Img-39.tif.xml  Orientation-Img-4.tif.xml  Orientation-Img-40.tif.xml  Orientation-Img-41.tif.xml  Orientation-Img-42.tif.xml  Orientation-Img-43.tif.xml  (+13 more)
include/: .all.h.swp  BALProblemVec.h  BALProblem_.h  GraphBasedBA.h  TestEqCollinear.h  Types.h  all.h  bal_problem.h
src/: .GraphBasedBA.cpp.swp  BALProblem.cpp  BALProblemVec.cpp  BALProblem_.cpp  CMakeLists.txt  CMakeListsNOVALID.txt  TestEqCollinear.cpp  TestJets.cpp  main.cpp  phgr_basic.cpp
src/Graphs/: GraphBasedBA.cpp
